@@ -38,14 +38,25 @@ public final static class Request {
 
    //-------------------------------------------------------------------------
    // Fields
-   //-------------------------------------------------------------------------</xsl:text>
+   //-------------------------------------------------------------------------
+
+   private final String __ip;</xsl:text>
 		<xsl:apply-templates select="input/param" mode="field" />
 
 		<xsl:text>
 
    //-------------------------------------------------------------------------
    // Methods
-   //-------------------------------------------------------------------------</xsl:text>
+   //-------------------------------------------------------------------------
+
+	 /**
+	  * Gets the IP address of the host that requested the function.
+		*
+		* @return IP address (e.g. 192.168.0.1), cannot be &lt;code&gt;null&lt;/code&gt;.
+		*/
+   public final String remoteIP() {
+      return __ip;
+   }</xsl:text>
 
 		<xsl:apply-templates select="input/param" mode="method" />
 
@@ -63,7 +74,7 @@ public final static class Request {
    /**
     * Constructs a new <code>Request</code> instance.
     */
-   public Request(]]></xsl:text>
+   public Request(String _ip, ]]></xsl:text>
 		<xsl:for-each select="input/param">
 			<xsl:variable name="javatype">
 				<xsl:call-template name="javatype_for_type">
@@ -79,7 +90,8 @@ public final static class Request {
 			<xsl:text> </xsl:text>
 			<xsl:value-of select="@name" />
 		</xsl:for-each>
-		<xsl:text>) {</xsl:text>
+		<xsl:text>) {
+      __ip = _ip;</xsl:text>
 		<xsl:for-each select="input/param">
 			<xsl:text>      _</xsl:text>
 			<xsl:value-of select="@name" />
